Fix alignment issues in footer

--- a/css/main.css
+++ b/css/main.css
@@ -108,22 +108,29 @@ footer {
 footer p {
   color: white;
   text-align: center;
+  line-height: 0px;
+  font-size: 1rem;
+}
+footer h2 {
+  font-size: 1rem;
+  color: white;
+  line-height: 25px;
 }
 footer img:nth-of-type(1) {
   width: 20%;
   float: left;
-  margin: 36px 0;
+  padding-top: 15%;
   -ms-transform: rotate(90deg); /* IE 9 */
   -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
   transform: rotate(90deg);
 }
 footer img:nth-of-type(2) {
   display: none;
-  width: 20%;
+  width: 0%;
 }
 footer img:nth-of-type(3) {
   display: none;
-  width: 20%;
+  width: 0%;
   -ms-transform: rotate(180deg); /* IE 9 */
   -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
   transform: rotate(180deg);
@@ -131,15 +138,17 @@ footer img:nth-of-type(3) {
 footer img:nth-of-type(4) {
   width: 20%;
   float: right;
-  margin: 36px 0;
+  padding-top: 15%;
   -ms-transform: rotate(90deg); /* IE 9 */
   -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
   transform: rotate(90deg);
 }
 #address {
   width: 50%;
+  float: left;
   display: block;
   margin: auto;
+  font-size: 0.5rem;
 }
 /*CLEAR FIX*/
 
